@@ -1,3 +1,11 @@
+2010-06-04  Alan Modra  <amodra@gmail.com>
+
+	PR target/44075
+	* gcc/config/rs6000/rs6000.c (struct machine_function): Reorder
+	fields for better packing.  Add lr_save_state.
+	(rs6000_ra_ever_killed): Return lr_save_state if set.
+	(rs6000_emit_eh_reg_restore): Set lr_save_state.
+
 2010-06-03  Alan Modra  <amodra@gmail.com>
 
 	PR target/44169
